cluster_dump/sonar/Service.sonar-postgresql-headless.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    cloud.google.com/neg: '{"ingress":true}'
    meta.helm.sh/release-name: sonar
    meta.helm.sh/release-namespace: sonar
  creationTimestamp: "2022-06-27T10:30:03Z"
  labels:
    app.kubernetes.io/instance: sonar
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: postgresql
    helm.sh/chart: postgresql-10.15.0
    service.alpha.kubernetes.io/tolerate-unready-endpoints: "true"
  name: sonar-postgresql-headless
  namespace: sonar
  resourceVersion: "94078241"
  uid: 875de4dd-a79f-4b86-b2b7-9a01daffeabd
spec:
  clusterIP: None
  clusterIPs:
  - None
  ipFamilies:
  - IPv4
  ipFamilyPolicy: SingleStack
  ports:
  - name: tcp-postgresql
    port: 5432
    protocol: TCP
    targetPort: tcp-postgresql
  publishNotReadyAddresses: true
  selector:
    app.kubernetes.io/instance: sonar
    app.kubernetes.io/name: postgresql
  sessionAffinity: None
  type: ClusterIP
status:
  loadBalancer: {}
